[gd_scene load_steps=4 format=3 uid="uid://um802b47lglk"]

[ext_resource type="FontFile" uid="uid://dr7uv14p8if1m" path="res://art/Stacked_Pixel.ttf" id="1_rwwpf"]
[ext_resource type="Script" path="res://nodes/ui/ScoreDisplay.gd" id="2_yrvgk"]
[ext_resource type="Texture2D" uid="uid://o3pxjhp1pelp" path="res://art/coins.png" id="3_kttdh"]

[node name="Score" type="Label"]
theme_override_fonts/font = ExtResource("1_rwwpf")
theme_override_font_sizes/font_size = 32
script = ExtResource("2_yrvgk")

[node name="Digit1" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_right = 60.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_rwwpf")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Digit2" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_right = 76.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_rwwpf")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Digit3" type="Label" parent="."]
layout_mode = 0
offset_left = 52.0
offset_right = 92.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_rwwpf")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Digit4" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_right = 108.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_rwwpf")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 14)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_kttdh")
